--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.11.0",
     "openapi-generator": "^0.1.39",
     "openapi-typescript": "^6.7.5",
